# stm32h7b0-w25q64-algorithm

./: Cargo.toml  template.yaml
src/: main.rs
