[package]
authors = ["Haobo Gu <haobogu@outlook.com>"]
edition = "2021"
readme = "README.md"
name = "stm32h7b0-w25q64-algorithm"
version = "0.1.0"

[dependencies]
cortex-m = { version = "0.7.7", features = ['critical-section-single-core'] }
cortex-m-rt = "0.7.3"
flash-algorithm = { version = "0.4.0" }
defmt = "0.3"
defmt-rtt = "0.4"
embassy-stm32 = { version = "0.1", features = [
    "stm32h7b0vb",
    "defmt",
    "memory-x",
    "time-driver-any",
] }
embassy-executor = { version = "0.5", features = [
    "defmt",
    "arch-cortex-m",
    "task-arena-size-8192",
    "executor-thread",
    "integrated-timers",
] }

# this lets you use `cargo fix`!
[[bin]]
name = "stm32h7b0-w25q64-algorithm"
test = false
bench = false

[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = "fat"
opt-level = 's'
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false
